# mcp-obsidian

./: .gitattributes  README.md  pyproject.toml
src/mcp_obsidian/: markdown_section.py  server.py  tools.py
tests/: test_markdown_section.py
